@@ -10,9 +10,18 @@
  * AGPL (http://www.gnu.org/licenses/agpl-3.0.txt) for more details.
  *
  */
-var log4js = require('log4js');
+const log4js = require("log4js");
+const tty = require("tty");
+
+// Only use colored output if stdout is a tty
+const appender = tty.isatty(process.stdout.fd) ? "colored" : "basic";
+log4js.configure({
+  appenders: { "out": { type: "stdout", layout: { type: appender } } },
+  categories: { default: { appenders: ["out"], level: "info" } }
+});
 
 global.logger = log4js.getLogger('shiny-server');
+
 // Backward compatibility shim for log4js
 logger.constructor.prototype.setLevel = function(level) {
   this.level = level;
